--- a/public/OpportunityZoneAdvisor.html
+++ b/public/OpportunityZoneAdvisor.html
@@ -6,6 +6,7 @@
     <title>Opportunity Zone Advisor</title>
     <link rel="stylesheet" href="OpportunityZoneAdvisor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="OpportunityZoneAdvisor.js" defer></script>
 </head>
 <body>
     <div class="main-container">
@@ -94,6 +95,5 @@
             </div>
         </div>
     </div>
-    <script src="OpportunityZoneAdvisor.js"></script>
 </body>
 </html>
